# pydata-madrid-bigframes

./: A Quick Intro to BigQuery DataFrames.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
