[tool.poetry]
name = "bigframes-demo"
version = "0.1.0"
description = "A Quick Intro to BigQuery DataFrames"
authors = ["Diego Vicente <dvicente@carto.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bigframes = "^1.10.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
sportypy = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
jupyterlab = "^4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
